change color footer

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <p>Nous sommes une entreprise dédiée à fournir des solutions professionnelles pour nos clients. Explorez notre site pour en savoir plus sur nos services et notre équipe.</p>
     </div>
     <footer>
-        <p>&copy; 2023 Site Professionnel. Tous droits réservés.</p>
+        <p style="color: #fff;">&copy; 2023 Site Professionnel. Tous droits réservés.</p>
     </footer>
 </body>
 </html>
