--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
         <h1>Bienvenue sur notre Site Professionnel</h1>
     </header>
     <nav>
+        <a href="sign_up.html">sign_up</a>
+        <a href="login.html">login</a>
         <a href="profil.html">Profil</a>
-        <a href="sign_up.html">Inscription</a>
-        <a href="users.html">Utilisateurs</a>
+        <a href="users.html">users</a>
     </nav>
     <div class="container">
         <h2>À propos de nous</h2>
