add log out btn

--- a/profil.html
+++ b/profil.html
@@ -24,6 +24,9 @@
             <button class="btn btn-primary" onclick="toggleEditMode()">
                 <i class="fas fa-edit me-2"></i>Modifier le profil
             </button>
+            <button class="btn btn-danger ms-2" id="logoutBtn">
+                <i class="fas fa-sign-out-alt me-2"></i>Déconnexion
+            </button>
         </div>
 
         <!-- Informations personnelles -->
